# my_imageCompressor_2018

./: CMakeLists.txt  ChangeLog.md  Makefile  README.md  imageCompressor  imageCompressor.cabal  package.yaml
app/: Main.hs
src/: Lib.hi  Lib.hs
